<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fitnessData"
            type="com.example.clonedstepcounterapp.FitnessDataResponseModel" />
    </data>

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#DCD6D6">

        <!-- Distance Section -->
        <LinearLayout
            android:id="@+id/rltRootDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/rltDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtDistance"
                    style="@style/title_text_all_caps_size12"
                    android:text="@string/distance"
                    android:textSize="32sp"
                    android:textColor="@color/distance_color" />

                <TextView
                    android:id="@+id/txtDistanceValue"
                    style="@style/value_text"
                    android:text="@{``+fitnessData.distance}"
                    android:textSize="25sp"
                    android:textColor="@color/distance_color" />

                <TextView
                    style="@style/unit_text"
                    android:text="@string/mi"
                    android:textSize="25sp"
                    android:textColor="@color/distance_color" />
            </LinearLayout>

        </LinearLayout>

        <!-- Steps Section -->
        <LinearLayout
            android:id="@+id/rltRootSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/rltSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtSteps"
                    style="@style/title_text_all_caps_size12"
                    android:text="@string/steps"
                    android:textSize="32sp"
                    android:layout_marginTop="48dp"
                    android:textColor="@color/steps_color" />

                <TextView
                    android:id="@+id/txtStepsValue"
                    style="@style/value_text"
                    android:text="@{``+fitnessData.steps}"
                    android:textSize="25sp"
                    android:textColor="@color/steps_color" />

                <TextView
                    style="@style/unit_text"
                    android:textSize="25sp"
                    android:text="@string/steps"
                    android:textColor="@color/steps_color" />
            </LinearLayout>
        </LinearLayout>

        <!-- Move Minutes Section -->
        <LinearLayout
            android:id="@+id/rltRootMoveMinutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/rltMoveMinutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtMoveMinutes"
                    style="@style/title_text_all_caps_size12"
                    android:text="@string/heart_points"
                    android:textSize="32sp"
                    android:layout_marginTop="48dp"
                    android:textColor="@color/move_minutes_color" />

                <TextView
                    android:id="@+id/txtMoveMinutesValue"
                    style="@style/value_text"
                    android:text="@{``+fitnessData.heartRatePoints}"
                    android:textSize="25sp"
                    android:textColor="@color/move_minutes_color" />

                <!-- You can define a unit for move minutes if needed -->

                <TextView
                    style="@style/unit_text"
                    android:textSize="25sp"
                    android:text="@string/heart_pts"
                    android:textColor="@color/move_minutes_color" />

            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fetch heart rate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.334" />

            <TextView
                android:id="@+id/bpm_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="BPM Rate here"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/cardview_dark_background"
                app:layout_constraintBottom_toTopOf="@+id/heart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>
